Backport r239430 to the 2.2.x branch. Lets make sure WINCH is kept free.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@289961 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
+Changes with Apache 2.1.8
+
+  *) Linux 2.0: remove support for threaded MPM's due to linuxthreads use
+     of SIGUSR1 clashing with graceful restart signal. [Colm MacCarthaigh]
+
 Changes with Apache 2.1.7
-  [Remove entries to the current 2.0 section below, when backported]
 
   *) SECURITY: CAN-2005-2491 (cve.mitre.org): 
      Fix integer overflows in PCRE in quantifier parsing which could
