--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) mod_cgid: run the get_suexec_identity hook within the request-handler 
+     instead of within cgid. PR 36410. [Colm MacCarthaigh]
+
   *) Linux 2.0: remove support for threaded MPM's due to linuxthreads use
      of SIGUSR1 clashing with graceful restart signal. [Colm MacCarthaigh]
 
