Backport r265506, r240044 and r240049 to the 2.2.x branch; Appends .PID to the ScriptSock filename.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@289972 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) mod_cgid: Append .PID to the script socket filename and remove the
+     script socket on exit. [Colm MacCarthaigh, Jim Jagielski]
+
   *) mod_cgid: run the get_suexec_identity hook within the request-handler 
      instead of within cgid. PR 36410. [Colm MacCarthaigh]
 
