Backport r239407 to the 2.2.x branch; Improve mod_disk_cache hit/miss ratio by canonicalising the url key.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290107 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) mod_disk_cache: Canonicalise the storage key, for improved hit/miss
+     ratio. [Colm MacCarthaigh]
+
   *) mod_cgid: Append .PID to the script socket filename and remove the
      script socket on exit. [Colm MacCarthaigh, Jim Jagielski]
 
