Backport r239420 and r239421 to the 2.2.x branch; Enhance CacheEnable/CacheDisable to be of use to proxy servers.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290133 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) mod_cache: Enhance CacheEnable/CacheDisable to control caching on a
+     per-protocol, per-host and per-path basis. Intended for proxy
+     configurations. [Colm MacCarthaigh]
+
   *) mod_disk_cache: Canonicalise the storage key, for improved hit/miss
      ratio. [Colm MacCarthaigh]
 
