Backport 279750 from TRUNK.
New provider function to list all available provider names in a
specific group and version (ap_list_provider_names).



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290137 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) New provider function to list all available provider names in a
+     specific group and version (ap_list_provider_names). [Jim Jagielski]
+
   *) mod_cache: Enhance CacheEnable/CacheDisable to control caching on a
      per-protocol, per-host and per-path basis. Intended for proxy
      configurations. [Colm MacCarthaigh]
