Document re-impl to providers for mod_proxy_balancer lbmethods
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290144 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) mod_proxy/mod_proxy_balancer: lbmethods now implemented as
+     providers. Prevent problems when no Vhost containers were
+     configured with proxy balancers. [Jim Jagielski]
+
   *) New provider function to list all available provider names in a
      specific group and version (ap_list_provider_names). [Jim Jagielski]
 
