Backport r239710, r239711, r239732, r239740 and r241815 to the 2.2.x branch; Fix PR 28167, which means we stop listening on ports when we do a graceful-restart.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290179 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) prefork, worker and event MPMs: Prevent children from holding open 
+     listening ports upon graceful restart or stop. PR 28167. 
+     [Colm MacCarthaigh, Brian Pinkerton <bp thinkpink.com>]
+
   *) SECURITY: CAN-2005-2700 (cve.mitre.org)
      mod_ssl: Fix a security issue where "SSLVerifyClient" was not
      enforced in per-location context if "SSLVerifyClient optional"
