Backport graceful-stop to the 2.2.x branch.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@290189 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.8
 
+  *) prefork, worker and event MPMs: Support a graceful-stop procedure:
+     Server will wait until existing requests are finished or until  
+     "GracefulShutdownTimeout" number of seconds before exiting. 
+     [Colm MacCarthaigh, Ken Coar, Bill Stoddard]
+
   *) prefork, worker and event MPMs: Prevent children from holding open 
      listening ports upon graceful restart or stop. PR 28167. 
      [Colm MacCarthaigh, Brian Pinkerton <bp thinkpink.com>]
