--- a/CHANGES
+++ b/CHANGES
@@ -4,11 +4,8 @@ Changes with Apache 2.1.8
   *) Fix regression since 2.0.x in AllowOverride Options handling. 
      PR 35330.  [kabe <kabe sra-tohoku.co.jp>]
 
-  *) Fix PR 25659 - Memory leak in ssl_util_algotypeof()
-     [David Blake <dblake hp com>, Martin Kraemer]
-
-  *) Document the ReceiveBufferSize change done in r157583 [Murray
-     Nesbitt <murray@cpan.org>]
+  *) mod_ssl: Fix memory leak in ssl_util_algotypeof().
+     PR 25659.  [David Blake <dblake hp com>, Martin Kraemer]
 
   *) prefork, worker and event MPMs: Support a graceful-stop procedure:
      Server will wait until existing requests are finished or until  
