Add a changes entry for the mod_dir/mod_cache stuff.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@292432 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
                                                         -*- coding: utf-8 -*-
+Changes with Apache 2.1.9
+
+  *) mod_cache/mod_dir: Correct a subrequest lookup bug which was preventing
+     mod_dir from serving indexes correctly with mod_cache enabled. 
+     [Colm MacCarthaigh]
+
 Changes with Apache 2.1.8
 
   *) Fix lingering close implementation to match 1.3.x behaviour.
