--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.9
 
-  *) Doxygen fixup [Neale Ranns neale ranns.org, Ian Holsman]
+  *) Doxygen fixup [Neale Ranns <neale ranns.org>, Ian Holsman]
 
   *) mod_cache/mod_dir: Correct a subrequest lookup bug which was preventing
      mod_dir from serving indexes correctly with mod_cache enabled. 
