--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.1.10
 
+  *) Add in new UseCanonicalPhysicalPort directive, which controls
+     whether or not Apache will ever use the actual physical port
+     when constructing the canonical port number. [Jim Jagielski]
+
   *) mod_dav: Fix a null pointer dereference in an error code path during the
      handling of MKCOL.
      [Ruediger Pluem, Ghassan Misherghi <ghassanm ucdavis.edu>]
