Roll on to 2.1.10-dev.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@345697 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
                                                         -*- coding: utf-8 -*-
+Changes with Apache 2.1.11
+
+
 Changes with Apache 2.1.10
 
   *) mod_negotiation: Minor performance tweak by reusing already calculated
