Backport fix for recursive errordocuments (PR 36090)
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@355454 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@ Changes with Apache 2.2.1
   *) Preserve the Content-Length header for a proxied HEAD response.
      PR 18757.  [Greg Ames]
 
+  *) Fix recursive ErrorDocument handling
+     PR 36090 [Submitted Chris Darroch]
+
 Changes with Apache 2.2.0
 
   *) mod_negotiation: Minor performance tweak by reusing already calculated
