--- a/CHANGES
+++ b/CHANGES
@@ -2,9 +2,9 @@
 Changes with Apache 2.2.1
 
   *) SECURITY: CVE-2005-3352 (cve.mitre.org)
-     mod_imap: Escape untrusted referer header before outputting in HTML
-     to avoid potential cross-site scripting.  Change also made to
-     ap_escape_html so we escape quotes.  Reported by JPCERT.
+     mod_imagemap: Escape untrusted referer header before outputting
+     in HTML to avoid potential cross-site scripting.  Change also
+     made to ap_escape_html so we escape quotes.  Reported by JPCERT.
      [Mark Cox]
 
   *) Fix syntax error in httpd.h with strict compilers.  PR 38740.
