Fix PR#38070 Avoid server-driven negotiation when a script has sent a Status: header.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@374895 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.1
 
+  *) PR#38070: Avoid Server-driven negotiation when a script has
+     emitted an explicit Status: header.
+
   *) Fix to avoid feeding C99 to C++ compilers [Joe Orton]
 
   *) SECURITY: CVE-2005-3357 (cve.mitre.org)
