--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 Changes with Apache 2.2.1
 
   *) mod_proxy_ajp: Support common headers of the AJP protocol in responses.
-     PR 38340. [Aleksey Pesternikov <apesternikov yahoo.com>, Ruediger Pluem]
+     PR 38340. [Aleksey Pesternikov <apesternikov yahoo.com>]
 
   *) mod_proxy_balancer: Do not overwrite the status of initialized workers and
      respect the configured status of uninitilized workers when creating a new
