*) Fix mis-shifted 32 bit scope, masked to 64 bits as a method.      [Will Rowe, Joe Orton]
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@390495 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.1
 
+  *) Fix mis-shifted 32 bit scope, masked to 64 bits as a method.
+     [Will Rowe, Joe Orton]
+
   *) mod_proxy: Fix KeepAlives not being allowed and set to
        backend servers. PR38602. [Ruediger Pluem, Jim Jagielski]
 
