--- a/docs/manual/style/lang/ru.xml
+++ b/docs/manual/style/lang/ru.xml
@@ -41,15 +41,15 @@
         <message id="nativename">Russian</message>
 
         <!-- Used for the moduleindex -->
-        <message id="corefeatures">Особенности ядра и мульти-процессные
-            модули</message>
+        <message id="corefeatures">Ядро и мульти-процессные модули</message>
         <message id="othermodules">Другие модули</message>
+        <message id="obsoletemodules">Устаревшие модули</message>
 
         <!-- Used for the modulesynopsis and sitemap -->
+        <message id="obsoleteapachemodule">Устаревший модуль Apache</message>
         <message id="apachemodule">Модуль Apache</message>
-        <message id="apachecore">Особенности ядра Apache</message>
-        <message id="apachempmcommon">Общие для всех МП-модулей директивы
-            Apache</message>
+        <message id="apachecore">Ядро Apache</message>
+        <message id="apachempmcommon">Общие для всех МП-модулей директивы Apache</message>
         <message id="apachempm">Мульти-процессные модули Apache</message>
 
         <!-- Used in description box for modulesynopsis -->
@@ -76,8 +76,7 @@
         <!-- Used for directive lists -->
         <message id="directives">Директивы</message>
         <message id="directive">Директива</message>
-        <message id="nodirectives">Этот модуль не предоставляет никаких
-            директив.</message>
+        <message id="nodirectives">Этот модуль не предоставляет никаких директив.</message>
 
         <!-- Used in summaries -->
         <message id="summary">Резюме</message>
@@ -87,10 +86,10 @@
 
         <!-- Used in headers and footers -->
         <message id="apachetitle">- HTTP сервер Apache</message>
-        <message id="apachehttpserver">HTTP сервер Apache Версия
+        <message id="apachehttpserver">HTTP сервер Apache версии
             &httpd.major;.&httpd.minor;</message>
         <message id="apachedocalt">[ДОКУМЕНТАЦИЯ APACHE]</message>
-        <message id="search">Google Search</message> <!-- search button -->
+        <message id="search">Поиск в Google</message> <!-- search button -->
         <message id="index">Оглавление</message> <!-- deprecated -->
         <message id="home">На главную страницу</message> <!-- deprecated -->
 
@@ -108,10 +107,11 @@
 
         <!-- footer line -->
         <message id="licensed">Licensed under the</message>
-        <message id="langavail">Available Languages</message>
+        <message id="langavail">Доступные языки</message>
 
         <!-- not up to date -->
-        <message id="outofdate">This translation may be out of date. Check the
-            English version for recent changes.</message>
+        <message id="outofdate">Этот перевод может быть устаревшим. Смотрите
+            английскую версию для ознакомления со всеми последними изменениями
+            в документе.</message>
     </messages>
 </language>
