Default handler: Don't return output filter apr_status_t values. PR:          31759 Reviewed by: rpleum, jim
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@393002 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.2
 
+  *) Default handler: Don't return output filter apr_status_t values.
+     PR 31759.  [Jeff Trawick, Ruediger Pluem, Joe Orton]
 
 Changes with Apache 2.2.1
 
