--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.2
 
+  *) htdbm: Warn the user when adding a plaintext password on a platform
+     where it wouldn't work with the server (i.e., anywhere that has
+     crypt()).  [Jeff Trawick]
+
   *) mod_proxy: don't reuse a connection that may be to the wrong backend
      PR 39253 [Ruediger Pluem]
 
