Backport r393364 from trunk, fixing a bug with crypt in htdbm. Reviewed By: trawick, colm, jim
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@396045 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,9 @@ Changes with Apache 2.2.2
      send to a target site.  Reported by Thiago Zaninotti
      <thiango nstalker.com>. [Mark Cox]
 
+  *) htdbm: Fix crash processing -d option in 64-bit mode on HP-UX.
+     [Jeff Trawick]
+
   *) htdbm: Warn the user when adding a plaintext password on a platform
      where it wouldn't work with the server (i.e., anywhere that has
      crypt()).  [Jeff Trawick]
