Roll on development to 2.2.3-dev.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@396067 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
                                                         -*- coding: utf-8 -*-
+Changes with Apache 2.2.3
+
 Changes with Apache 2.2.2
 
   *) mod_deflate: work correctly in an internal redirect
