Vote&promote (and fix typo while we're at it)
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@404776 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@ Changes with Apache 2.2.2
      PR 38793. [Ruediger Pluem, matthias <mk-asf gigacodes.de>]
 
   *) core: Prevent reading uninitialized memory while reading a line of
-     protocol input.  PR 39282. [Davi Arnaut <davi haxent.com.br>]
+     protocol input.  PR 39282. [Davi Arnaut <davi haxent com br>]
 
   *) mod_dbd: Update defaults, improve error reporting.
      [Chris Darroch <chrisd pearsoncmg com>, Nick Kew]
