Backport trawick's mod_charset_lite patch
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@404847 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.3
 
+  *) mod_charset_lite: Bypass translation when the source and dest charsets
+     are the same. [Jeff Trawick]
+
 Changes with Apache 2.2.2
 
   *) mod_deflate: work correctly in an internal redirect
