--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
-  *) mod_ssl: for all ssl_engine_vars.c lookups, fall back to master connection
-     if conn_rec itself holds no valid SSLConnRec*. Fixes PR58666.
+  *) mod_http2: fixed bug in input window size calculation by moving chunked
+     request body encoding into later stage of processing.
      [Stefan Eissing]
      
   *) mod_proxy_fdpass: Fix AH01153 error when using the default configuration.
