--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: when running in async mpm processing, mod_http2 will cease
+     processing on idle connections (e.g. no open streams) back to the mpm.
+     [Stefan Eissing]     
+
   *) mod_http2: fixed bug in input window size calculation by moving chunked
      request body encoding into later stage of processing.
      [Stefan Eissing]
