--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: On async MPMs (event), idle HTTP/2 connections will enter KEEPALIVE
+     state and become eligible for MPM cleanup under load.
+     [Stefan Eissing]
+
   *) mod_http2: new r->subprocess_env variables HTTP2 and H2PUSH, set to "on"
      when available for request.
      [Stefan Eissing]
