rewrote http2 connection state handling, fixed keepalive timeout handling for async and sync MPMs, cleaned logging, improved scoreboard updates of http2 master connections
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1721417 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,9 @@
 Changes with Apache 2.5.0
 
   *) mod_http2: On async MPMs (event), idle HTTP/2 connections will enter KEEPALIVE
-     state and become eligible for MPM cleanup under load.
+     state and become eligible for MPM cleanup under load. Rewrote connection
+     state handling. Defaults for H2KeepAliveTimeout shortened. Cleaned up logging.
+     Improved scoreboard updates for http2 master threads.
      [Stefan Eissing]
 
   *) mod_http2: new r->subprocess_env variables HTTP2 and H2PUSH, set to "on"
