Add common extension "m4a" for MPEG 4 Audio to mime.types.
As a reference see Wikipedia:
https://en.wikipedia.org/wiki/MPEG-4_Part_14#.MP4_versus_.M4A

PR: 57895


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1723567 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mime.types: add common extension "m4a" for MPEG 4 Audio.
+     PR 57895 [Dylan Millikin <dylan.millikin gmail.com>]
+
   *) mod_http2: async reading for http2 connections disabled for now. Fixed
      flushing of last GOAWAY frame. Fixed calculation of last stream id
      accepted as described in rfc7540. Reading in KEEPALIVE state now 
