--- a/docs/manual/style/lang/fr.xml
+++ b/docs/manual/style/lang/fr.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!DOCTYPE language SYSTEM "../lang.dtd">
-<!-- English revision: 106753 -->
+<!-- English revision: 1659855 -->
 
 <!--
  Licensed to the Apache Software Foundation (ASF) under one or more
@@ -148,12 +148,12 @@
 	en langue anglaise.</message>
 
         <!-- retirement -->
-        <message id="retired.headline">Please note</message>
+        <message id="retired.headline">A savoir</message>
         <message id="retired.description">
-            <p>This document refers to the <strong>2.0</strong> version of Apache httpd, which <strong>is no longer maintained</strong>. Upgrade, and refer to the current version of httpd instead, documented at:</p>
+            <p>Ce document concerne la version <strong>2.0</strong> du serveur HTTP Apache et celle-ci <strong>n'est plus maintenue</strong>. Si vous utilisez cette version, il est fortement recommand&eacute; de mettre &agrave; jour votre serveur vers la version actuelle (<strong>2.4</strong>), et de consulter la documentation correspondante ici :</p>
         </message>
-        <message id="retired.current">Current release version of Apache HTTP Server documentation</message>
-        <message id="retired.document">You may follow <link>this link</link> to go to the current version of this document.</message>
+        <message id="retired.current">Version actuelle de la documentation du serveur HTTP Apache</message>
+        <message id="retired.document">Pour consulter la version actuelle de ce document, vous pouvez suivre <link>ce lien</link>.</message>
 
     </messages>
 </language>
