*) mod_rewrite: Avoid looping on relative substitutions that      result in the same filename we started with. PR 58854.      [Eric Covener]
Previously, the comparison of old and new filename happened before
some prefixes might be added.



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1724656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_rewrite: Avoid looping on relative substitutions that
+     result in the same filename we started with. PR 58854.
+     [Eric Covener]
+
   *) mime.types: add common extension "m4a" for MPEG 4 Audio.
      PR 57895 [Dylan Millikin <dylan.millikin gmail.com>]
 
