avoid polluting search results by putting the full AH message in CHANGES>
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1724849 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
-  *) mod_cgid: Message AH02550, failure to flush a response to the client,
+  *) mod_cgid: Message 02550, failure to flush a response to the client,
      is now logged at TRACE1 level to match the underlying core output filter
      severity.  [Eric Covener]
 
