*) mod_proxy_fcgi: Suppress HTTP error 503 and message 01075,      "Error dispatching request", when the cause appears to be      the client closing the connection.
PR58118.  

Submitted By: Tobias Adolph <adolph lrz.de>
Committed By: covener



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1724857 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy_fcgi: Suppress HTTP error 503 and message 01075, 
+     "Error dispatching request", when the cause appears to be 
+     due to the client closing the connection. 
+     PR58118.  [Tobias Adolph <adolph lrz.de>]
+
   *) mod_cgid: Message 02550, failure to flush a response to the client,
      is now logged at TRACE1 level to match the underlying core output filter
      severity.  [Eric Covener]
